// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Oracles add oracle succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52500,
}
`;

exports[`Oracles remove oracle decreases required oracles 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 37118,
}
`;

exports[`Oracles remove oracle succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32809,
}
`;

exports[`Oracles set required oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 31808,
}
`;

exports[`Oracles verify oracles all signatures succeeds with all signatures 1`] = `78553`;

exports[`Oracles verify oracles min signatures succeeds with all signatures 1`] = `46650`;

exports[`Oracles verify oracles min signatures succeeds with required signatures 1`] = `46589`;
